# quips

./: .coveragerc  .editorconfig  .gitignore  .gitlab-ci.yml  .travis.yml  DEVELOPMENT.md  Gruntfile.js  LICENSE  Pipfile  README.md  README.rst  app.json  dependencies.yml  dev.yml  docker-compose.yml  env.example  install_os_dependencies.sh  package.json  pyproject.toml  renovate.json  requirements.txt  tox.ini
.github/workflows/: build.yml  codeql.yml  test.yml
compose/django/: Dockerfile  Dockerfile-dev  entrypoint.sh
compose/postgres/: Dockerfile
config/: urls.py  wsgi.py
config/settings/: common.py  local.py  production.py  test.py
docs/: Makefile  conf.py  index.rst  make.bat
quips/api/: serializers.py  urls.py  views.py
quips/api/tests/: test_views.py
quips/contrib/sites/migrations/: 0001_initial.py  0002_set_site_domain_and_name.py  0003_auto_20160314_0308.py  0004_auto_20200814_0448.py
quips/quips/: admin.py  anonymize.py  filters.py  models.py  stats.py  urls.py  views.py
quips/quips/fixtures/: next-gen.json  trek.json
quips/quips/management/commands/: importquips.py
quips/quips/migrations/: 0001_initial.py  0002_auto_20160311_0607.py  0003_quip_uuid.py  0004_clique_20170901_0223.py  0005_quip_uuid.py  0006_speaker_should_obfuscate.py  0007_redo_quote_ordering.py  0008_drop_old_quote_order_field.py  0009_auto_20190121_0632.py  0010_auto_20210621_1804.py
quips/quips/templatetags/: quips_extras.py
quips/quips/tests/: test_anonymize.py  test_filters.py  test_importquips.py  test_stats.py
quips/slackapp/: urls.py  views.py
quips/slackapp/tests/: test_views.py
quips/static/css/: project.css  quips-basicblue.css
quips/static/sass/: _sticky-footer.scss  project.scss  quips-basicblue.scss
quips/templates/: 404.html  base.html
quips/templates/quips/: quip_detail.html  quip_detail_in_clique.html
quips/website/: admin.py  urls.py  views.py
quips/website/templatetags/: quips_extras.py
quips/website/tests/: test_templatetags.py  test_views.py
requirements/: base.txt  local.txt  production.txt  test.txt
tests/: all.settings  engine.py
