[tool.poetry]
name = "quips"
version = "0.1.0"
description = "Silly web app for silly quips."
authors = ["Brad Smith <bradster@infinitewarp.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
Django = "~4.2"
django-environ = "^0.11.2"
django-model-utils = "^4.3.1"
django-redis = "^5.4.0"
gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.9"
pytz = "^2023.3.post1"
redis = "^5.0.1"
whitenoise = "^6.6.0"
djangorestframework = "^3.14.0"
unidecode = "^1.3.8"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
django-extensions = "^3.2.3"
flake8 = "^7.0.0"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.2"
flake8-black = "^0.3.6"
faker = "^22.4.0"
coverage = "^7.4.0"
werkzeug = "^3.0.0"
tox = "^4.6.4"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
