[tool.poetry]
name = "quips"
version = "0.1.0"
description = "Silly web app for silly quips."
authors = ["Brad Smith <bradster@infinitewarp.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.9"
django-environ = "^0.11.2"
django-model-utils = "^4.5.1"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.9"
pytz = "^2024.1"
redis = "^5.0.4"
whitenoise = "^6.6.0"
djangorestframework = "^3.15.1"
unidecode = "^1.3.8"
ruff = "^0.7.0"

[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.3"
faker = "^26.0.0"
coverage = "^7.5.3"
werkzeug = "^3.0.3"
tox = "^4.15.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
