[tool.poetry]
name = "quips"
version = "0.1.0"
description = "Silly web app for silly quips."
authors = ["Brad Smith <bradster@infinitewarp.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
Django = "^5.1.3"
django-environ = "^0.11.2"
django-model-utils = "^4.5.1"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
pytz = "^2024.2"
redis = "^5.2.0"
whitenoise = "^6.8.2"
djangorestframework = "^3.15.2"
unidecode = "^1.3.8"
ruff = "^0.7.0"

[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.3"
faker = "^32.0.0"
coverage = "^7.6.4"
werkzeug = "^3.1.3"
tox = "^4.23.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
